--- a/Animacion pt2.html
+++ b/Animacion pt2.html
@@ -21,7 +21,7 @@ Diseño Digital </p></marquee></marquee>
 	Animacion aplicando un borde a la zona de movimiento</marquee>
 	<hr>
 
-<h1>Animacion aplicando una imagen a la zona de movimiento</h1>
+<h1>Animacion aplicando uihna imagen a la zona de movimiento</h1>
 <marquee>Imagen
 	<img src="https://www.freeiconspng.com/thumbs/toy-train-png/toy-train-png-23.png"
 	width="500" height="250" alt="tuorials"></marquee>
