--- a/Ejercicio 1.html
+++ b/Ejercicio 1.html
@@ -1,5 +1,5 @@
 <html>
-<title>Ejercico 1</title>
+<title>Ejercico_1</title>
 <head><p style="color:Blue"><font face="Comic Sans MS">5 canciones</font></p></head>
 <h1 style="color:red"><font face="garamond">Save your tears</h1>
 <div>
